src/main/webapp/css/ContentView.css
.ContentView{
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  min-width: 600px;
}

.ContentView .sidenav-ctn{
  position: absolute;
  top: 43px; left: 0; bottom: 0;
  width: 280px;
}

.ContentView .search-form{
  position: relative;
  width: 400px;
  margin: 30px auto;
}
  
.ContentView .search-form input{
  width: 300px;
  height: 30px;
}

.ContentView .search-result{
  top: 130px; right: 0; bottom: 0; left: 0;
  position: absolute;
  width: 80%;
  margin: 20px auto;
  padding: 5px;
  border: solid 1px #eee;
}

.ContentView .search-result .table  {
    height: 100%;
    margin: 10px;
}


.ContentView .search-result .tableHeader, .ContentView .search-result .tableBody{
    display: block;
    width: 100%;

}

.ContentView .search-result .table .tableBody{
    height: 400px;
    overflow:auto;
}

.ContentView .search-result .table .row{
    display: table-row;
    width: 100%;
    height: 30px;

}

.ContentView .search-result .table .row>div{
    display: table-cell;
    padding-top: 5px;
    width: 33.3333%;
    border-bottom: 1px solid #dddddd;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}


.ContentView .search-info{
  display: block;
  color: #777;
  width: 375px;
  text-align: right;
  height: 16px;
}

